[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/characters/enemies/EnemySpawner.gd" type="Script" id=1]
[ext_resource path="res://game/characters/enemies/DummyEnemy.tscn" type="PackedScene" id=2]

[sub_resource type="PrismMesh" id=1]
size = Vector3( 0.4, 0.4, 0.05 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.1, 0.4, 0.05 )

[node name="EnemySpawner" type="Position3D"]
script = ExtResource( 1 )

[node name="DummyEnemy" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )

[node name="Pointer" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.5 )
mesh = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Pointer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.37819, 0 )
mesh = SubResource( 2 )

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_Timer_timeout"]
